# Intership

./: .gitignore  .gitmodules  CMakeLists.txt  Course.cpp  Course.h  Instructor.cpp  Instructor.h  TimeSlot.h  University.cpp  University.h
UniversityTimetablingSystem/: CMakeLists.txt  README.md  build.sh  constants.py  requirements.txt  run-database.sh  run-frontend.sh  run-server.sh  setup.py
UniversityTimetablingSystem/backend/: db.sqlite3  manage.py  requirements.txt  result.json
UniversityTimetablingSystem/backend/university_timetabling/: asgi.py  settings.py  urls.py  wsgi.py
UniversityTimetablingSystem/backend/university_timetabling/timetable/: apps.py  models.py  urls.py  views.py
UniversityTimetablingSystem/backend/university_timetabling/timetable/migrations/: 0001_initial.py  0002_university.py
UniversityTimetablingSystem/backend/university_timetabling/timetable/tests/: test_integration.py  test_views.py
UniversityTimetablingSystem/frontend/: package-lock.json  package.json
UniversityTimetablingSystem/frontend/src/: App.vue
UniversityTimetablingSystem/frontend/src/components/: AddCourse.vue  AddInstructor.vue  AddTimeSlot.vue  CreateSchedule.vue  ShowDetails.vue
UniversityTimetablingSystem/include/: Constants.h  Course.h  Instructor.h  TimeSlot.h  University.h
UniversityTimetablingSystem/src/: Course.cpp  Instructor.cpp  Instructor.h  TimeSlot.cpp  University.cpp  main.cpp  university_bindings.cpp
UniversityTimetablingSystem/submodules/argparse/: CMakeLists.txt
UniversityTimetablingSystem/tests/: test_University.cpp
src/: Course.cpp  Course.h  Instructor.h  TimeSlot.h  University.h
tests/: test_University.cpp
